# agentic_websearch

./: README.md  pyproject.toml
src/websearch/: crew.py  main.py  report.md
src/websearch/config/: agents.yaml  tasks.yaml
